# the_multi-room-speaker

./: .gitignore  README.md
OLD_UDP/udp_multi_speaker/: .gitignore  README.md
OLD_UDP/udp_multi_speaker/clientsrc/: CMakeLists.txt  main.cpp  main.h  spkclient.pro
OLD_UDP/udp_multi_speaker/clientsrc/android/udpplayercli/: dialog.cpp  dialog.h  main.cpp  main.h  tinyauan.cpp  tinyauan.h  udppplayer.pro  ui_dialog.h
OLD_UDP/udp_multi_speaker/clientsrc/android/udpplayercli/android/: AndroidManifest.xml
OLD_UDP/udp_multi_speaker/common/: alsacls-o.cpp  alsacls.cpp  alsacls.h  aocls.cpp  aocls.h  aoutil.cpp  aoutil.h  clithread.cpp  clithread.h  cpipein.cpp  cpipein.h  mp3cls.cpp  mp3cls.h  pidaim.cpp  pidaim.h  pulsecls.cpp  pulsecls.h  screenxy.cpp  screenxy.h  sock.cpp  sock.h  tcpsrv.cpp  tcpsrv.h
OLD_UDP/udp_multi_speaker/serversrc/: CMakeLists.txt  main.cpp  spkserver  spkserver.pro
OLD_UDP/udp_multi_speaker/test/: kissfm.sh  sick.sh  stream.sh  test.sh  vacantza.sh
cli/: aop.cpp  aop.h  main.cpp  main.h  make.sh  pider.cpp  player.cpp  player.h  sclient.cpp  sclient.h  tcpspkcli.pro  udpdisc.cpp  udpdisc.h
cli/android/tcpplayercli/: Makefile  dialog.cpp  dialog.h  dialog.ui  main.cpp  main.h  tcpplayercli.pro  tinyau.h  tinyauan.h  tinyauqt.cpp  tinyauqt.h
common/: screenxy.cpp  screenxy.h  sock.h  srvq.h
srv/: main.cpp  main.h  make.sh  pidaim.cpp  pidaim.h  pipein.cpp  pipein.h  tcpspksrv.pro  tcpsrv.cpp  tcpsrv.h  udpdisc.cpp  udpdisc.h
test/: sick.sh
